# hyperbot-hack

./: .gitignore  ARCHITECTURE.md  CHANGES.md  CHECKLIST.md  COMMANDS.md  CURRENT_STATE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_RUNNING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  READY_TO_RUN.md  RUN_SUMMARY.md  RUN_WITH_REAL_API.md  STATUS.md  USE_LOCAL_OCR.md  check_progress.sh  requirements.txt  run_pipeline.sh  test_api.py  validate_setup.sh  verify_ready.sh
.kiro/specs/financial-error-detection-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
hyperapi-sdk/: LICENSE  README.md  pyproject.toml  setup.py
hyperapi-sdk/hyperapi/: __init__.py  client.py  exceptions.py  local_client.py
hyperapi-sdk/tutorial/: The_Billing_Typo.ipynb
logic/: README.md  __init__.py  detectors.py  mock_api.py  output.py  parser.py  pipeline.py  splitter.py  vendor_master.py
