[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperapi-sdk"
version = "0.1.0"
description = "HyperAPI Python SDK - Financial document processing APIs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "HyperAPI", email = "research@hyperbots.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ocr", "document-processing", "invoice", "financial", "api"]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://apis.hyperbots.com"
Repository = "https://github.com/hyperapi/hyperapi-sdk"
Issues = "https://github.com/hyperapi/hyperapi-sdk/issues"

[tool.setuptools.packages.find]
include = ["hyperapi*"]
